# task-manager-rpy

./: GEMINI.md  README.md  REPORT.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  alembic.ini  openapi.json  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: a1122172517c_change_task_description_and_comment_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  health.py  seed.py  task.py  user.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/models/: comment.py  task.py  user.py
backend/app/schemas/: auth.py  comment.py  common.py  task.py  user.py
backend/app/services/: auth_service.py  comment_service.py  task_service.py  user_service.py
backend/app/tests/: conftest.py
backend/app/tests/api/v1/: test_admin.py  test_auth.py  test_comments.py  test_tasks.py  test_users.py
backend/data/: users.json
frontend/: .gitignore  Dockerfile  GEMINI.md  README.md  cypress.config.cjs  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.cypress.json  tsconfig.json
frontend/cypress/fixtures/: auth.json  comments.json  example.json  task-response.json  task.json  tasks.json  user-response.json  user.json  users-emails.json  users.json
frontend/cypress/support/: component.ts
frontend/src/: App.tsx  main.tsx
frontend/src/context/: theme.ts
frontend/src/hooks/: useAuth.tsx  useComments.ts  useMediaQuery.tsx  useTaskMutations.ts  useTasks.ts  useTheme.tsx  useUserMutation.ts  useUsers.ts
frontend/src/interfaces/: auth.ts  comment.ts  pagination.ts  tasks.ts  user.ts
(+68 files in other folders)
